--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.0.0",
+    "swr": "^0.5.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
