--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
+    "react-toastify": "^7.0.4",
     "socket.io-client": "^4.0.0",
     "swr": "^0.5.5",
     "web-vitals": "^1.0.1"
