:sparkles: Add premium pop-up

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@danktuary/react-discord-message": "^1.0.2",
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +18,7 @@
     "react-select": "^4.3.0",
     "react-toastify": "^7.0.4",
     "socket.io-client": "^4.0.0",
+    "sweetalert": "^2.1.2",
     "swr": "^0.5.5",
     "web-vitals": "^1.0.1"
   },
