--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_ID="639817080664883200"
 REACT_APP_API_URL="http://localhost:3300"
+REACT_APP_DISCORD_URL="https://discord.gg/manageinvite"
