--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_CLIENT_ID="639817080664883200"
 REACT_APP_API_URL="http://localhost:3300"
 REACT_APP_DISCORD_URL="https://discord.gg/manageinvite"
+REACT_APP_SHARD_COUNT=2
