:sparkles: Add some paypal stuff

--- a/.env
+++ b/.env
@@ -2,3 +2,17 @@ REACT_APP_CLIENT_ID="639817080664883200"
 REACT_APP_API_URL="http://localhost:3300"
 REACT_APP_DISCORD_URL="https://discord.gg/manageinvite"
 REACT_APP_SHARD_COUNT=2
+
+REACT_APP_SANDBOX_PAYPAL_ENABLED=true
+
+REACT_APP_PAYPAL_EMAIL="androz2091@gmail.com"
+REACT_APP_PAYPAL_IPN_URL="https://api.manage-invite.xyz/paypal/ipn"
+REACT_APP_PAYPAL_RETURN_URL="https://api.manage-invite.xyz/paypal/callback"
+REACT_APP_PAYPAL_CANCEL_URL="https://api.manage-invite.xyz"
+REACT_APP_PAYPAL_FORM_URL="https://www.paypal.com/cgi-bin/webscr"
+
+REACT_APP_SANDBOX_PAYPAL_EMAIL="sb-jvkgv1790003@business.example.com"
+REACT_APP_SANDBOX_PAYPAL_IPN_URL="http://localhost:3300/paypal/ipn"
+REACT_APP_SANDBOX_PAYPAL_RETURN_URL="http://localhost:3300/paypal/callback"
+REACT_APP_SANDBOX_PAYPAL_CANCEL_URL="http://localhost:3000"
+REACT_APP_SANDBOX_PAYPAL_FORM_URL="https://www.sandbox.paypal.com/cgi-bin/webscr"
