--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
     "react-toastify": "^7.0.4",
+    "react-tooltip": "^4.2.21",
     "socket.io-client": "^4.0.0",
     "sweetalert": "^2.1.2",
     "swr": "^0.5.5",
