:wrench: Switch to production

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_CLIENT_ID="639817080664883200"
-REACT_APP_API_URL="http://localhost:3300"
-REACT_APP_DISCORD_URL="https://discord.gg/manageinvite"
+REACT_APP_API_URL="https://api.manage-invite.xyz"
+REACT_APP_DISCORD_URL="https://discord.gg/N99PJgE"
 REACT_APP_SHARD_COUNT=2
 
 REACT_APP_SANDBOX_PAYPAL_ENABLED=true
