:wrench: Fix shard count in config

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_API_URL="https://api.manage-invite.xyz"
 REACT_APP_CLIENT_ID="619894044893380618"
 REACT_APP_DISCORD_URL="https://discord.gg/N99PJgE"
-REACT_APP_SHARD_COUNT=2
+REACT_APP_SHARD_COUNT=14
 
 REACT_APP_SANDBOX_PAYPAL_ENABLED=false
 
